--- a/web/src/pages/login.scss
+++ b/web/src/pages/login.scss
@@ -56,8 +56,18 @@
     stroke: #cccccc;
 }
 
-.login-page-description {
-  color: #aaaaaa;
-  margin-top: -50px;
+@media only screen and (min-width: 999px) {
+  .login-page-description {
+    color: #aaaaaa;
+    margin-top: -50px;
+  }
 }
+
+@media only screen and (max-width: 998px) {
+  .login-page-description {
+    color: #aaaaaa;
+    margin-top: -30px;
+  }
+}
+
 
